# rust-game-engine-prototype

./: .gitignore  Cargo.lock.license  Cargo.toml  deny.toml  import-settings.json  resources.db
.github/workflows/: benchmark.yml  cargo-deny.yml  docs.yml  lint.yml  test-miri-nightly.yml  test.yml
engine/: Cargo.toml  README.md
engine/src/: allocators.rs  arena.rs  collections.rs  engine.rs  event.rs  game_objects.rs  geom.rs  input.rs  lib.rs  linear_allocator.rs  mixer.rs  multithreading.rs  renderer.rs  resources.rs  test_platform.rs
engine/src/allocators/: linear_allocator.rs  static_allocator.rs
engine/src/arena/: vec.rs
engine/src/collections/: channel.rs  queue.rs  ring_buffer.rs  sparse_array.rs  vec.rs
engine/src/collections/ring_buffer/: boxed.rs  slice.rs
engine/src/game_objects/: game_object.rs  scene_builder.rs
engine/src/linear_allocator/: pool.rs  vec.rs
engine/src/multithreading/: scatter_gather.rs  scoped.rs
engine/src/renderer/: sprite.rs  texture.rs
engine/src/resources/: asset_index.rs  assets.rs  chunks.rs  deserialize.rs  file_reader.rs  loaded_chunks.rs  loader.rs  serialize.rs
engine/src/resources/asset_index/: handles.rs  named_asset.rs
engine/src/resources/assets/: audio_clip.rs  sprite.rs  texture.rs
engine/src/resources/assets/texture/: pixels.rs
example/: Cargo.toml  README.md  import-settings.json  import-settings.json.license  resources.db
example/resources/: orange-cube.png.license  tone.flac
example/src/: main.rs
import-asset/: Cargo.toml  README.md
import-asset/src/: cli.rs  database.rs  importers.rs  main.rs  settings.rs
import-asset/src/importers/: audio_clip.rs  sprite.rs  texture.rs
import-asset/src/importers/sprite/: pixels.rs
import-asset/src/importers/texture/: pixels.rs
pal/: Cargo.toml  README.md
pal/src/: lib.rs
platform/: Cargo.toml  README.md
platform-abstraction-layer/: Cargo.toml  README.md
platform-abstraction-layer/src/: boxed.rs  channel.rs  input.rs  io.rs  lib.rs  render.rs  semaphore.rs  thread_pool.rs
platform-sdl2/: Cargo.toml  README.md
platform-sdl2/src/: lib.rs
platform-sdl3/: Cargo.toml
platform-sdl3/src/: lib.rs
platform/src/: boxed.rs  channel.rs  input.rs  io.rs  lib.rs  render.rs  thread_pool.rs  time.rs
