# SPDX-FileCopyrightText: NONE
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "example"
version = "0.1.0"
edition = "2021"
authors = ["Jens Pitkänen <jens.pitkanen@helsinki.fi>"]
license = "GPL-3.0-or-later"

[dependencies]
bytemuck = { version = "1.22.0" }
engine = { version = "0.1.0", path = "../engine" }
platform = { version = "0.1.0", path = "../platform" }
platform-sdl2 = { version = "0.1.0", path = "../platform-sdl2", optional = true }
profiling = { version = "1.0.16", default-features = false, optional = true }

[features]
default = ["sdl2"]
sdl2 = ["dep:platform-sdl2"]
profile = ["dep:profiling", "profiling/profile-with-tracy"]

[package.metadata.vcpkg]
dependencies = ["sdl2"]
git = "https://github.com/microsoft/vcpkg"
rev = "2025.03.19"
target = { x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" } }
