[package]
name = "import-asset"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
arrayvec = { version = "0.7.6", default-features = false }
bpaf = { version = "0.9.16", features = ["derive", "batteries", "autocomplete"] }
engine = { version = "0.1.0", path = "../engine", features = ["asset-conditioning"] }
image = { version = "0.25.5", default-features = false, features = ["jpeg"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "std"] }
