# SPDX-FileCopyrightText: NONE
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "import-asset"
version = "0.1.0"
edition = "2021"
authors = ["Jens Pitkänen <jens.pitkanen@helsinki.fi>"]
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.95"
arrayvec = { version = "0.7.6", default-features = false, features = ["serde"] }
bpaf = { version = "0.9.16", features = ["derive", "batteries", "autocomplete"] }
bytemuck = { version = "1.21.0", default-features = false }
engine = { version = "0.1.0", path = "../engine" }
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png", "webp", "qoi"] }
platform-abstraction-layer = { version = "0.1.0", path = "../platform-abstraction-layer" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
symphonia = "0.5.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "std"] }
