# SPDX-FileCopyrightText: 2024 Jens Pitkänen <jens.pitkanen@helsinki.fi>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "platform-sdl2"
version = "0.1.0"
edition = "2021"
authors = ["Jens Pitkänen <jens.pitkanen@helsinki.fi>"]
license = "GPL-3.0-or-later"

[dependencies]
platform-abstraction-layer = { version = "0.1.0", path = "../platform-abstraction-layer" }
sdl2 = "0.37.0"
sdl2-sys = "0.37.0"

[features]
default = []
