# SPDX-FileCopyrightText: NONE
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "platform-sdl2"
version = "0.1.0"
edition = "2021"
authors = ["Jens Pitkänen <jens.pitkanen@helsinki.fi>"]
license = "GPL-3.0-or-later"

[dependencies]
platform = { version = "0.1.0", path = "../platform" }
sdl2 = "0.37.0"
sdl2-sys = "0.37.0"

[features]
default = []
