# SPDX-FileCopyrightText: NONE
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "platform"
version = "0.1.0"
edition = "2021"
authors = ["Jens Pitkänen <jens.pitkanen@helsinki.fi>"]
license = "GPL-3.0-or-later"

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
bytemuck = { version = "1.20.0", default-features = false }
crossbeam-utils = { version = "0.8.21", default-features = false }
